# technical-assessment-ax

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/: exceptions.py  main.py
app/api/: deps.py
app/api/routes/: tickets.py
app/db/: database.py  models.py
app/repositories/: ticket_repository.py
app/schemas/: ticket.py
app/services/: ticket.py
tests/: conftest.py  manual_api_scenarios.py  test_tickets.py
